# rusty-basic

./: .editorconfig  .gitignore  .gitpod.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  rustfmt.toml
rusty_basic/: Cargo.toml
rusty_basic/fixtures/: COLOR.BAS  HELLO_S.BAS  INKEY.BAS  INPUT.BAS
rusty_basic/src/: error_envelope.rs  lib.rs
rusty_basic/src/built_ins/: cvd.rs  data.rs  eof.rs  err.rs  field.rs  get.rs  input.rs  lbound.rs  open.rs  read.rs  right.rs  ubound.rs
rusty_basic/src/common/: error_envelope.rs  indexed_map.rs  location.rs
rusty_basic/src/instruction_generator/: calls.rs  dim.rs  expression.rs  if_block.rs  instruction_generator.rs  label_resolver.rs  loops.rs  main.rs  mod.rs  print.rs  select_case.rs  statement.rs  subprogram_info.rs  test_utils.rs
rusty_basic/src/interpreter/: arguments.rs  byte_size.rs  context.rs  data_segment.rs  default_stdlib.rs  error.rs  indexed_map.rs  interpreter.rs  interpreter_trait.rs  io.rs  keyboard.rs  lpt1_write.rs  main.rs  mod.rs  print.rs  read_input.rs  registers.rs  screen.rs  string_utils.rs  test_utils.rs  utils.rs  variables.rs  variant_casts.rs  write_printer.rs
rusty_basic/src/linter/: arg_validation.rs  const_value_resolver.rs  linter.rs  mod.rs  test_utils.rs  traits.rs  type_resolver_impl.rs  types.rs
rusty_basic/src/parser/: assignment.rs  char_reader.rs  comment.rs  constant.rs  declaration.rs  def_type.rs  dim.rs  dim_name.rs  do_loop.rs  exit.rs  expression.rs  for_loop.rs  go_sub.rs  if_block.rs  implementation.rs  main.rs  mod.rs  name.rs  on_error.rs  print.rs  resume.rs  select_case.rs  statement.rs  statement_separator.rs  statements.rs  sub_call.rs  test_utils.rs  top_level_token.rs  type_qualifier.rs  user_defined_type.rs  var_name.rs  while_wend.rs
rusty_basic/src/variant/: array_value.rs  casting.rs  mod.rs  traits.rs  user_defined_type_value.rs  variant.rs
rusty_linter/: Cargo.toml
rusty_linter/src/: arg_validation.rs  casting.rs  const_value_resolver.rs  error.rs  lib.rs  linter.rs  qb_casting.rs  string_length.rs  test_utils.rs  traits.rs  type_resolver.rs  type_resolver_impl.rs  types.rs
rusty_linter/src/built_ins/: arg_validation.rs  beep.rs  chr.rs  close.rs  cls.rs  color.rs  cvd.rs  data.rs  def_seg.rs  environ_fn.rs  environ_sub.rs  eof.rs  err.rs  field.rs  get.rs  inkey.rs  input.rs  instr.rs  kill.rs  lbound.rs  lcase.rs  left.rs  len.rs  line_input.rs  locate.rs  lset.rs  ltrim.rs  mid_fn.rs  mkd.rs  mod.rs  name.rs  open.rs  peek.rs  poke.rs  put.rs  read.rs  right.rs  rtrim.rs  space.rs  str_fn.rs  (+8 more)
rusty_linter/src/converter/: context.rs  mod.rs  names.rs  pos_context.rs  program_rules.rs  top_level_rules.rs  traits.rs  types.rs
rusty_linter/src/core/: can_cast_to.rs  casting.rs  const_value_resolver.rs  error.rs  linter_context.rs  main.rs  mod.rs  name_context.rs  name_scope.rs  qb_casting.rs  qualify_variant.rs  ref_to_value_visitor.rs  resolved_param_type.rs  signature.rs  string_length.rs  subprogram_name.rs  traits.rs  type_resolver.rs  type_resolver_impl.rs  types.rs  variable_info.rs  visitor.rs
rusty_linter/src/names/: compacts.rs  compacts_info.rs  implicit_vars.rs  main.rs  mod.rs  name_info.rs  names.rs  names_inner.rs  names_outer.rs  traits.rs
rusty_linter/src/post_linter/: built_in_linter.rs  condition_type_linter.rs  dots_linter.rs  expression_reducer.rs  mod.rs  (+10 more)
rusty_parser/: Cargo.toml
rusty_parser/src/: assignment.rs  char_reader.rs  comment.rs  constant.rs  declaration.rs  def_type.rs  dim.rs  dim_name.rs  do_loop.rs  error.rs  exit.rs  expression.rs  for_loop.rs  global_statement.rs  go_sub.rs  if_block.rs  implementation.rs  lib.rs  name.rs  on_error.rs  param_name.rs  parser.rs  print.rs  resume.rs  select_case.rs  statement.rs  statement_separator.rs  statements.rs  sub_call.rs  test_utils.rs  top_level_token.rs  user_defined_type.rs  var_name.rs  while_wend.rs
(+1403 files in other folders)
