[package]
name = "rusty_basic"
version = "0.6.1"
authors = ["Nikolaos Georgiou <nikolaos.georgiou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
