[package]
name = "rusty_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
tokenizers = { path = "../tokenizers" }
recognizers = { path = "../recognizers" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
