[package]
name = "rusty_basic"
version = "0.8.0"
authors = ["Nikolaos Georgiou <nikolaos.georgiou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
rusty_common = { path = "../rusty_common" }
rusty_parser = { path = "../rusty_parser" }
rusty_linter = { path = "../rusty_linter" }
rusty_variant = { path = "../rusty_variant" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
