[package]
name = "rusty_linter"
version = "0.11.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_bit_vec = { path = "../rusty_bit_vec" }
rusty_common = { path = "../rusty_common" }
rusty_parser = { path = "../rusty_parser" }
rusty_variant = { path = "../rusty_variant" }
