[package]
name = "rusty_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_common = { path = "../rusty_common" }
rusty_pc = { path = "../rusty_pc" }
# TODO parser should not depend on variant
rusty_variant = { path = "../rusty_variant" }
