[package]
name = "rusty_parser"
version = "0.10.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_bit_vec = { path = "../rusty_bit_vec" }
rusty_common = { path = "../rusty_common" }
rusty_pc = { path = "../rusty_pc" }
